--- a/WebDriverTest/.classpath
+++ b/WebDriverTest/.classpath
@@ -28,5 +28,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/admin/.m2/repository/mysql/mysql-connector-java/6.0.5/mysql-connector-java-6.0.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/admin/.m2/repository/mysql/mysql-connector-java/6.0.5/mysql-connector-java-6.0.5-sources.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
