--- a/WebDriverTest/pom.xml
+++ b/WebDriverTest/pom.xml
@@ -30,17 +30,22 @@
              <version>3.8.1</version>								
              <scope>test</scope>								
         </dependency>				
-        <dependency>				
-            <groupId>org.seleniumhq.selenium</groupId>								
-            <artifactId>selenium-java</artifactId>								
-            <version>2.45.0</version>								
-		</dependency>				
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.4.0</version>
+        </dependency>				
         <dependency>				
             <groupId>org.testng</groupId>								
             <artifactId>testng</artifactId>								
             <version>6.8</version>								
-            <scope>test</scope>							  			
-       </dependency>				
+            <scope>compile</scope>							  			
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.8-dmr</version>
+        </dependency>				
 </dependencies>
 
 </project>
